updated app config file to avoid cors issue